--- a/index.html
+++ b/index.html
@@ -14,22 +14,52 @@
         </header>
         <main>
             <section class="hero-section">
+                <h1>This website is awesome</h1>
+                <p class="hero-p">This website has some subtext that goes here under the main title. 
+                   It's a smaller font and the color is lower contrast
+                </p>
 
+                <button class="hero-button">Sign up</button>
+
+                <img src="./img/blue-oats.jpg" alt="Oatmeal">
             </section>
 
-            <section class="">
-                <header>Some random information.</header>
-
+            <section class="random">
+                <header class="information">Some random information.</header>
+                <div class="info">
+                    <img src="./img/oats-1.jpg" alt="Oats 1">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="./img/oats-2.jpg" alt="Oats 1">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="./img/oats-3.jpg" alt="Oats 1">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="./img/oats-4.jpg" alt="Oats 1">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
 
             </section>
 
             <section class="quote-section">
-
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling
+                    up space, or maybe people will actually read it. Who knows? All I know is that it looks
+                    nice.
+                </p>
+                <p>-Thor, God of Thunder</p>
 
             </section>
 
-            <section>
-
+            <section class="signup-section">
+                <div class="signup">
+                <p>Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+                <button class="signup-button">Sign up</button>
+                </div>
             </section>
         </main>
 
