Updated changes in quote section

--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
 
             </section>
 
-            <section class="signup-section">
-                <div class="signup">
-                <p>Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button class="signup-button">Sign up</button>
+            <section class="sign-section">
+                <div class="product">
+                    <span class="call-to-action">Call to action! It's time!
+
+                    <p class="redirect">Sign up for our product by clicking that button right over there!</p></span>
+                    <button class="sign-button">Sign up</button>
                 </div>
             </section>
         </main>
