--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Project Landing Page</title>
     </head>
     <body>
+         <!-- Header section -->
         <header class="header">
             <h2>Header Logo</h2>
             <ul class="links">
@@ -14,6 +15,7 @@
                 <li><a href="">header link three</a></li>
             </ul>
         </header>
+         <!-- Main content section -->
         <main>
             <section class="hero-section">
                 <div class="hero">
@@ -74,7 +76,6 @@
         </main>
 
         <footer>Copyright © The Odin Project 2023</footer>
-
 
     </body>
 </html>
