--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <!-- External css linked here -->
         <title>Project Landing Page</title>
     </head>
     <body>
          <!-- Header section -->
         <header class="header">
             <h2>Header Logo</h2>
+            <!-- Navigation links -->
             <ul class="links">
                 <li><a href="">header link one</a></li>
                 <li><a href="">header link two</a></li>
                 <li><a href="">header link three</a></li>
             </ul>
         </header>
+
          <!-- Main content section -->
         <main>
+            <!-- hero content section -->
             <section class="hero-section">
                 <div class="hero">
                     <h1>This website is awesome</h1>
@@ -31,6 +35,7 @@
                 
             </section>
 
+            <!-- random section -->
             <section class="random">
                 <header class="information">Some random information.</header>
                 <div class="foods">
@@ -54,6 +59,7 @@
 
             </section>
 
+            <!-- quote section -->
             <section class="quote-section">
                 <div class="quote">
                 <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling
@@ -65,6 +71,7 @@
 
             </section>
 
+            <!-- sign section -->
             <section class="sign-section">
                 <div class="product">
                     <span class="call-to-action">Call to action! It's time!
@@ -75,6 +82,7 @@
             </section>
         </main>
 
+        <!-- Footer section -->
         <footer>Copyright © The Odin Project 2023</footer>
 
     </body>
